<resources>
    <string name="app_name">TodoList</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>
    <string name="descripci_n">Descripción</string>
    <string name="cantidad">Cantidad</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="id">ID</string>
    <string name="nombre">NOMBRE</string>
    <string name="cantidad_2">CANTIDAD</string>
    <string name="descripcion">DESCRIPCION</string>
</resources>
