<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProductActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/nombre_del_producto"
        android:textAlignment="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="text"
        android:id="@+id/newpnombre"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/cantidad"
        android:textAlignment="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="number"
        android:id="@+id/newpcantidad"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/descripci_n"
        android:textAlignment="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="text"
        android:id="@+id/newpdescripcion"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:textColor="@color/whiteText"
        android:backgroundTint="@color/createButton"
        android:text="@string/crear"
        android:id="@+id/btn_crear"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:textColor="@color/blackText"
        android:backgroundTint="@color/warningButton"
        android:visibility="gone"
        android:text="@string/eliminar"
        android:id="@+id/btn_eliminar"/>
    <Button
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:backgroundTint="@color/cancelButton"
        android:textColor="@color/whiteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:id="@+id/btn_cancelar"/>



</LinearLayout>